resources/screen.css
/* ... */
footer a {
  color: #fff;
  text-decoration: underline;
  font-family: sans-serif;
}

footer h4 {
  font-size: 1.3em;
  font-weight: bold;
  margin-bottom: 1em;
  vertical-align: baseline;
  color: #fff;
  font-family: sans-serif;
}

footer p {
  margin: 12px 0;
}

footer ul {
  list-style: none none;
}
/* stylelint-disable */
#firstHeading {
  /* stylelint-enable */
  font-size: x-large;
  padding: 10px;
}

.mw-body .mw-indicators {
  font-size: 0.875em;
  line-height: 1.6;
  position: relative;
}

.mw-indicators {
  float: right;
  z-index: 1;
}

.mw-body-content {
  position: relative;
  z-index: 0;
}

.mw-snapwikiskin-main {
  margin-top: 50px;
  padding-left: 5px;
  padding-right: 5px;
  min-height: 95vh;
  display: flex;
  flex-direction: row;
}

.mw-snapwikiskin-icon {
  margin-top: 10px;
  height: 1.5rem;
  width: 1.5rem;
}

#mw-portlets {
  font-size: inherit;
  width: 10em;
  padding: 0.25rem;
}

fieldset {
  border: 1px solid #2a4b8d;
  margin: 1em 0;
  padding: 0 1em 1em;
}

form {
  border: 0;
  margin: 0;
}

textarea {
  width: 100%;
  padding: 0.1em;
  display: block;
  box-sizing: border-box;
}

.mw-body h1,
.mw-body-content h1,
.mw-body-content h2 {
  margin-bottom: 0.25em;
  padding: 0;
  font-family: "Linux Libertine", Georgia, Times, serif;
  line-height: 1.3;
}

#footer-places,
#footer-info,
#footer-poweredbyico {
  padding: 5px;
}

#mw-contentwrapper {
  flex: 1;
}

.mw-editsection {
  font-size: 0.8rem;
  font-family:
    system-ui,
    -apple-system,
    "Segoe UI",
    Roboto,
    Helvetica,
    Arial,
    sans-serif,
    "Apple Color Emoji",
    "Segoe UI Emoji";
  margin: 0.02rem;
}

.printfooter {
  display: none;
}

#catlinks {
  text-align: left;
  border: 1px solid;
  padding: 5px;
  background-color: #d3d3d3;
}

.mw-topbox {
  font-weight: bold;
}

/* Used by extensions to output errors */
.error {
  font-weight: bold;
  color: #a55858;
}

